pez.sh/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  pez-sh
  namespace: pezsh
  labels:
    app:  pez-sh
spec:
  selector:
    matchLabels:
      app: pez-sh
  replicas: 3
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  pez-sh
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  pez-sh
        image:  docker.io/rwejlgaard/pez.sh:1.0.1
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: 50m
            memory: 20Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort:  80
          name:  pez-sh
      restartPolicy: Always
